# pychatz-react-fastapi

./: README.md
.github/workflows/: tests.yml
react_frontend/: .gitignore  package-lock.json  package.json
react_frontend/public/: index.html
react_frontend/src/: App.js
react_frontend/src/components/: ChatCard.js  ChatForm.js  ChatScreen.js  DeleteButton.js  LoginBox.js  PychatzBar.js  SigninBox.js  UserMenu.js  UsersDrawer.js
react_frontend/src/hooks/: useFetch.js  useFetchStoredUsername.js
react_frontend/src/modules/: message.js  socketCommunicaton.js
react_frontend/src/pages/: Chat.js  LogSign.js  NotFound.js
server/: .gitignore  MANIFEST.in  pyproject.toml  requirements.txt  setup.cfg  tox.ini
server/src/webapp/: __init__.py  config.py  connection_manager.py  db.py  models.py  schemas.py  security.py  services.py  socket_models.py  start_for_debug.py
server/tests/: conftest.py  test_app.py  test_database.py  test_services.py
