[metadata]
name=pychatz
version=0.0.1
author=thelearningwolf
license = MIT
license_file = LICENSE
author_email=thelearningwolf.himself@gmail.com
description=A small full-stack chat system, built from scratch.
classifiers=
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    =src
packages = find:
install_requires:
    fastapi>=0.68
    uvicorn>=0.15
    sqlalchemy==1.4
    python-multipart
    python-jose>=3.3.0
    passlib>=1.7.4
    bcrypt>=3.2.0
    jinja2>=3.0
    aiofiles>=0.7
    requests>=2.26.0
    websockets>=10.0
python_requires = >=3.7
include_package_data = True
zip_safe = no

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest>=6.0
    pytest-cov>=2.0
    mypy>=0.910
    flake8>=3.9
    tox>=3.24

[options.package_data]
webapp = py.typed

[options.data_files]
webapp/static =
    src/webapp/static/*
webapp/templates =
    src/webapp/templates/*

[flake8]
max-line-length = 160